@@ -1,163 +1,0 @@
-# This file is managed by Puppet. DO NOT EDIT.
-
-# sssd::config
-[sssd]
-domains = LOCAL, test.case
-services = nss, pam
-config_file_version = 2
-reconnection_retries = 3
-debug_timestamps = true
-debug_microseconds = false
-
-# sssd::service::autofs
-[autofs]
-debug_timestamps = true
-debug_microseconds = false
-
-# sssd::service::nss
-[nss]
-debug_timestamps = true
-debug_microseconds = false
-reconnection_retries = 3
-enum_cache_timeout = 120
-entry_cache_nowait_percentage = 0
-entry_negative_timeout = 15
-filter_users = root
-filter_groups = root
-filter_users_in_groups = true
-
-# sssd::service::pam
-[pam]
-debug_timestamps = true
-debug_microseconds = false
-reconnection_retries = 3
-offline_credentials_expiration = 0
-offline_failed_login_attempts = 3
-offline_failed_login_delay = 5
-pam_verbosity = 1
-pam_id_timeout = 5
-pam_pwd_expiration_warning = 7
-
-# sssd::service::ssh
-[ssh]
-debug_timestamps = true
-debug_microseconds = false
-ssh_hash_known_hosts = true
-
-# sssd::service::sudo
-[sudo]
-debug_timestamps = true
-debug_microseconds = false
-sudo_timed = false
-
-# sssd::domain LDAP
-[domain/LDAP]
-debug_timestamps = true
-debug_microseconds = false
-description = LDAP Users Domain
-min_id = 1000
-max_id = 60000
-enumerate = false
-cache_credentials = true
-account_cache_expiration = 0
-use_fully_qualified_names = false
-ignore_group_members = true
-id_provider = ldap
-auth_provider = ldap
-access_provider = ldap
-chpass_provider = ldap
-sudo_provider = ldap
-autofs_provider = ldap
-dns_resolver_timeout = 5
-case_sensitive = true
-proxy_fast_alias = false
-
-# sssd::provider::ldap
-debug_microseconds = false
-krb5_canonicalize = false
-krb5_use_kdcinfo = true
-ldap_access_order = expire,lockout
-ldap_account_expire_policy = shadow
-ldap_chpass_update_last_change = true
-ldap_default_authtok = <PASSWORD>
-ldap_default_authtok_type = password
-ldap_default_bind_dn = cn=Administrator,cn=Users,dc=test,dc=case
-ldap_disable_paging = false
-ldap_disable_range_retrieval = false
-ldap_force_upper_case_realm = false
-ldap_groups_use_matching_rule_in_chain = false
-ldap_id_mapping = false
-ldap_id_use_start_tls = true
-ldap_idmap_autorid_compat = false
-ldap_initgroups_use_matching_rule_in_chain = false
-ldap_krb5_init_creds = true
-ldap_pwd_policy = shadow
-ldap_referrals = true
-ldap_sasl_canonicalize = false
-ldap_schema = rfc2307
-ldap_search_base = dc=test,dc=case
-ldap_sudo_include_netgroups  = true
-ldap_sudo_include_regexp = true
-ldap_sudo_use_host_filter = true
-ldap_tls_cacertdir = /etc/pki/simp_apps/sssd/x509/cacerts
-ldap_tls_cert = /etc/pki/simp_apps/sssd/x509/public/host.test.case.pub
-ldap_tls_cipher_suite = HIGH:-SSLv2
-ldap_tls_key = /etc/pki/simp_apps/sssd/x509/private/host.test.case.pem
-ldap_tls_reqcert = demand
-ldap_uri = ldap://FIXME
-ldap_use_tokengroups = false
-ldap_user_gecos = dn
-
-# sssd::domain LOCAL
-[domain/LOCAL]
-debug_timestamps = true
-debug_microseconds = false
-description = LOCAL Users Domain
-min_id = 1000
-max_id = 60000
-enumerate = false
-cache_credentials = false
-account_cache_expiration = 0
-use_fully_qualified_names = false
-ignore_group_members = true
-id_provider = local
-auth_provider = local
-access_provider = permit
-dns_resolver_timeout = 5
-case_sensitive = true
-proxy_fast_alias = false
-
-# sssd::provider::local
-debug_timestamps = true
-debug_microseconds = false
-create_homedir = true
-remove_homedir = true
-
-# sssd::domain test.case
-[domain/test.case]
-debug_timestamps = true
-debug_microseconds = false
-min_id = 1000
-max_id = 60000
-enumerate = false
-cache_credentials = true
-account_cache_expiration = 0
-use_fully_qualified_names = true
-ignore_group_members = true
-id_provider = ad
-access_provider = ad
-dns_resolver_timeout = 5
-case_sensitive = true
-proxy_fast_alias = false
-realmd_tags = manages-system joined-with-adcli
-
-# sssd::provider::ad
-ad_domain = test.case
-ad_server = ad.test.case
-default_shell = /bin/bash
-dyndns_update = true
-fallback_homedir = /home/%u@%d
-krb5_realm = TEST.CASE
-krb5_store_password_if_offline = true
-ldap_id_mapping = false
-ldap_use_tokengroups = true
