@@ -1,3 +1,11 @@
+* Wed Jan 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.4-0
+- Update the sssd::provider::ldap::ldap_access_order parameter to support the
+  ppolicy related options that were added in sssd 1.14.0
+  - ppolicy
+  - pwd_expire_policy_reject
+  - pwd_expire_policy_warn
+  - pwd_expire_policy_renew
+
 * Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.3-0
 - Changed $sssd::install::package_ensure from 'latest' to 'installed'
   - It will also respect `simp_options::package_ensure`
